--- a/ServiceManagerFrontend/src/Pages/PageEmail/PageEmail.css
+++ b/ServiceManagerFrontend/src/Pages/PageEmail/PageEmail.css
@@ -58,3 +58,10 @@
     cursor: pointer;
     margin-top: 10px;
 }
+
+
+.error-message {
+    color: red;
+    font-weight: bold;
+    margin-top: 10px;
+}
