--- a/ServiceManagerFrontend/src/Pages/PageShowInterventions/PageInterventions.css
+++ b/ServiceManagerFrontend/src/Pages/PageShowInterventions/PageInterventions.css
@@ -16,9 +16,10 @@
     row-gap: 30px ;
 
   }
+  
   .Intervention-container {
     height : 280px ;
-   width : 85% ;
+     width : 85% ;
    background-color: rgb(255, 255, 255) ;
    z-index: 1;
    position: relative;
@@ -61,21 +62,35 @@
     width:100% ;
   }
 
-  .p1 , .p2   {
-    display : flex ;
-    justify-content: space-around;
+  .p2 {
+    width:65% ;
+
+  }
+
+  .p1 {
     width:35% ;
-    align-self: flex-start;
+
+  }
+
+  .p1 , .p2   {
+    display         : flex ;
+    justify-content : space-between;
+    padding         : 0px 15px 0px 5px ;
+
   }
    
   .p1 span:nth-last-of-type(1) , .p2 span:nth-last-of-type(1) {
-    color : darkblue ;
+    color           : darkblue  ;
+
   }
 
-   .p2 {
-    width:65% ;
-    align-self: flex-start;
+  .Span2 {
+    text-align        : start;
+    width             : 40%; 
   }
+
+
+
   h3 {
     margin-top : -10px ;
     color :rgb(3, 42, 171)
@@ -139,16 +154,21 @@
     color              : #005580;
   }
   
-
+  .Type_Attribut {
+    display: flex ;
+    justify-content: space-between;
+    width :50%;
+  }
   
   .button-group-inter {
     display            : flex;
-    justify-content: flex-end;
-    position: absolute;
+    justify-content    : flex-end;
+    align-items        : flex-end ;
+    position           : absolute;
     bottom             : 0px;
     right              : 5px;
     column-gap         : 10px;
-    width: 100%;
+    width              : 100%;
   }
 
   .button-consulter {
@@ -159,7 +179,7 @@
     width              : 100px;
   }
   
-  .button-update {
+  .button-update-show {
     color              : white;
     background-color   : rgb(6, 83, 171);
     cursor : pointer ;
@@ -171,12 +191,13 @@
   .button-envoyer {
     color              : white;
     background-color   : rgb(21, 150, 43);
-    cursor : pointer ;
+    cursor             : pointer ;
     font-weight        : bold;
     height             : 35px;
     width              : 100px;
   }
-  .button-consulter:hover , .button-update:hover , .button-envoyer:hover   {
+
+  .button-consulter:hover , .button-update-show:hover , .button-envoyer:hover   {
      opacity: 80%;
   }
 
@@ -199,17 +220,139 @@
       transform        : translateY(0);
     }
   }
-  
+  .Type_M_Abr {
+    display            : none;
+  }
+
   /* Responsive */
-  @media (max-width: 600px) {
-    .welcome-section h1 {
-      font-size        : 20px;
-    }
-    .welcome-section .Message {
-      margin-top       : 18%;
-    }
-    input {
-      height           : 25px;
+  @media (max-width: 1500px) {
+
+    .Intervention-container {
+      font-size: 13px;
+      height   : 240px ; 
+ 
     }
   }
+
+  @media (max-width: 1300px) {
+
+    .Intervention-container {
+      font-size: 12px;
+      height   : 200px ; 
+ 
+    }
+    .Type_M {
+      display: none;
+    }
+    .Type_M_Abr {
+      display: block;
+    }
+
+    .button-group-inter {
+      column-gap: 6px ;
+
+    }
+    .button-consulter  , .button-update-show-show-show , .button-envoyer{
+      font-weight        : normal;
+      height             : 27px;
+      width              : 55px;
+      font-size          : 10px;
+      padding            : 1px  ;
+      left               : 0px;
+    }
+
+  }
+  @media (max-width: 1024px) {
+
+    .Intervention-container {
+      font-size: 10px;
+      height   : 180px ; 
+ 
+    }
+  }
+
+  @media (max-width: 800px) {
+
+    .Intervention-container {
+      font-size: 8px;
+      height   : 150px ; 
+ 
+    }
+  }
+
+  @media (max-width: 700px) {
+
+    .container-intreventions {
+      width               : 100%;
+
+    }
+    .Interventions-container {
+      padding: 20px 2px 0px 10px;
+    grid-template-columns: 1fr  1fr;
+    column-gap: 0px;
+
+    }
+    .Intervention-container {
+      font-size: 8px;
+      height   : 150px ; 
+ 
+    }
+    .Type_M {
+      display: none;
+    }
+    .Type_M_Abr {
+      display: block;
+    }
+
+    .button-group-inter {
+      column-gap: 4px ;
+
+    }
+    .button-consulter  , .button-update-show , .button-envoyer{
+      font-weight        : normal;
+      height             : 20px;
+      width              : 45px;
+      font-size          : 9px;
+      padding            : 1px  ;
+      left               : 0px;
+    }
+
+  }
+
+
+  @media (max-width: 470px) {
+    .Interventions-container {
+     grid-template-columns: 1fr;
+
+    }
+    .Intervention-container {
+      margin:  auto;
+      width : 80% ;
+      font-size: 9px;
+ 
+    }
+    .Type_M {
+      display: none;
+    }
+    .Type_M_Abr {
+      display: block;
+    }
+
+    .button-group-inter {
+      column-gap: 4px ;
+
+    }
+    .button-consulter  , .button-update-show , .button-envoyer{
+      font-weight        : normal;
+      height             : 20px;
+      width              : 45px;
+      font-size          : 9px;
+      padding            : 1px  ;
+      left               : 0px;
+
+
+
+    }
+  }
+
   
