--- a/ServiceManagerFrontend/src/Pages/PageErreur/PageErreur.css
+++ b/ServiceManagerFrontend/src/Pages/PageErreur/PageErreur.css
@@ -1,4 +1,4 @@
-.container {
+.container-error-management {
     height          :  100vh;
     width           : 100%;
     display         : flex ;
