--- a/ServiceManagerFrontend/src/Pages/PageInscription/PageInscription.css
+++ b/ServiceManagerFrontend/src/Pages/PageInscription/PageInscription.css
@@ -1,4 +1,4 @@
-.container {
+.container-singUp {
     height          :  100vh;
     width           : 100%;
     display         : flex ;
@@ -51,7 +51,7 @@
     margin          : 0% 2% ;
   }
 
-  input {
+   .welcome-section .Input-Form {
     padding         : 3px 10px ;
     height          : 35px ;
     margin-bottom   : 10px;
@@ -72,7 +72,7 @@
     color           : #005580;
   }
 
-  .button {
+  .button-sing_up {
     background-color: #067200;
     transition      : background 0.3s ease;
     padding         : 12px 24px;
@@ -86,7 +86,7 @@
     color           : white ;
   }
 
-  .button:hover {
+  .button-sing_up:hover {
     background-color: #3b8b9d;
   }
 
@@ -97,15 +97,40 @@
   }
   
   /* Responsive */
-  @media (max-width: 600px) {
+  @media (max-width: 700px) {
+    .home-container  {
+        width: 80% ;
+    }
+    .welcome-section
+    {
+       width:100%;
+    }
+    .welcome-section label 
+    {
+      font-size           : 14px;
+      padding: 3px;
+    }
+
+    .welcome-section .Input-Form 
+    {
+      font-size           : 14px;
+    }
+
     .welcome-section h1 {
       font-size           : 20px;
+
     }
     .welcome-section .Message {
       margin-top          : 18% ;
     }
     input {
       height              : 25px ;
+      width :90%;
+    }
+
+    .button {
+        margin-top: 5px;
+        font-size: 12px;
     }
   
   }
