--- a/ServiceManagerFrontend/src/Pages/PageUpdateIntervention/PageUpdateIntervention.css
+++ b/ServiceManagerFrontend/src/Pages/PageUpdateIntervention/PageUpdateIntervention.css
@@ -50,8 +50,8 @@ label {
   margin             : 0% 2%;
 }
 
-input,
-select {
+.welcome-section-intrevention .welcome-section input,
+.welcome-section-intrevention .welcome-section select {
   padding            : 3px 10px;
   height             : 35px;
   margin-bottom      : 10px;
