--- a/ServiceManagerFrontend/src/PagesAdmin/EntrepriseManagement/EntreprisesManagement/EntrepriseFormModal.module.css
+++ b/ServiceManagerFrontend/src/PagesAdmin/EntrepriseManagement/EntreprisesManagement/EntrepriseFormModal.module.css
@@ -18,12 +18,13 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.65);
+  background-color: rgba(0, 0, 0,0.65);
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1000;
-  animation: fadeIn 0.3s ease-out;
+  /* animation: fadeIn 0.3s ease-out; */
+
 }
 
 .modalContent { /* Classe renommée */
